# translatarr

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  README.zh-CN.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: docker.yml  publish-npm.yml  publish-python.yml  publish-rust.yml  sdk-drift.yml
app/: globals.css  layout.tsx  manifest.ts  page.tsx
app/api/[transport]/: route.ts
app/api/chats/: route.ts
app/api/docs/: route.ts
app/api/keys/: route.ts
app/api/settings/: route.ts
app/api/translate/: route.ts
app/components/: api-keys-manager.tsx  auth-gate.tsx  brand-seal.tsx  settings-dialog.tsx  translator.tsx  update-banner.tsx  user-admin.tsx  voice-mode.tsx
app/healthcheck/: route.ts
app/lib/: api-error.ts  api-key-store.ts  auth.ts  chat-store.ts  chat-types.ts  db.ts  languages.ts  llm-client.ts  openapi.ts  provider-error.ts  request-schemas.ts  settings-store.ts  settings-types.ts  translation-error.ts  translation-schema.ts  translation-service.ts  update-check.ts  user-store.ts  version.ts
clients/python/: README.md  pyproject.toml
clients/python/scripts/: model_header.txt  regenerate.sh
clients/python/src/translatarr/: __init__.py  _core.py  _errors.py  _models.py  aio.py  client.py  languages.py
clients/rust/: Cargo.toml  README.md
clients/rust/scripts/: openapi-to-schema.mjs  regenerate.sh
clients/rust/src/: client.rs  core.rs  error.rs  generated.rs  lib.rs  models.rs
clients/typescript/: README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts
scripts/: copy-swagger-ui.mjs  dump-openapi.ts
(+62 files in other folders)
