[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "translatarr-client"
version = "0.1.0"
description = "Synchronous and asynchronous Python client for the Translatarr API."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GNU AFFERO GENERAL PUBLIC LICENSE" }
authors = [{ name = "joshrmcdaniel" }]
keywords = ["translatarr", "translation", "llm", "api", "client"]
dependencies = [
    "httpx>=0.24",
    "pydantic>=2.4",
]

[project.optional-dependencies]
# Tooling for regenerating the pydantic models from the OpenAPI spec
# (clients/python/scripts/regenerate.sh).
codegen = ["datamodel-code-generator>=0.65"]

[tool.hatch.build.targets.wheel]
packages = ["src/translatarr"]
